# chainlit-ollama

./: .gitignore  LICENSE  Readme.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/chainlit-ollama/: __init__.py  simpleChainlit.py
